--- a/tmux.conf
+++ b/tmux.conf
@@ -65,7 +65,7 @@ set -g status-bg colour234
 set -g status-fg colour137
 # set -g status-attr dim
 set -g status-left ''
-set -g status-right '#[fg=green][ #[default]#($HOME/bin/tmux_conf) #[fg=green]] #[fg=green]'
+set -g status-right '#[fg=green][ #[default]#($HOME/.tmux/tmux_conf) #[fg=green]] #[fg=green]'
 set -g status-right-length 75
 set -g status-left-length 25
 
